test/files/neg/checksensible-equals.check
checksensible-equals.scala:4: warning: comparing values of types Long and Int using `equals` unsafely bypasses cooperative equality; use `==` instead
  1L equals 1
     ^
checksensible-equals.scala:11: warning: comparing values of types Any and Int using `equals` unsafely bypasses cooperative equality; use `==` instead
  (1L: Any) equals 1
            ^
checksensible-equals.scala:12: warning: comparing values of types AnyVal and Int using `equals` unsafely bypasses cooperative equality; use `==` instead
  (1L: AnyVal) equals 1
               ^
checksensible-equals.scala:13: warning: comparing values of types AnyVal and AnyVal using `equals` unsafely bypasses cooperative equality; use `==` instead
  (1L: AnyVal) equals (1: AnyVal)
               ^
checksensible-equals.scala:16: warning: comparing values of types A and Int using `equals` unsafely bypasses cooperative equality; use `==` instead
  def foo[A](a: A) = a.equals(1)
                             ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
